--- a/hadoop-commons/pom.xml
+++ b/hadoop-commons/pom.xml
@@ -11,14 +11,14 @@
     <name>${project.artifactId}</name>
     <description>${project.artifactId}</description>
     <packaging>jar</packaging>
-    <version>20190415</version>
+    <version>20190416</version>
 
     <properties>
         <avro.version>1.8.2</avro.version>
         <commons-csv.version>1.4</commons-csv.version>
         <commons-io.version>2.6</commons-io.version>
         <commons-lang.version>2.6</commons-lang.version>
-        <hadoop.version>3.1.1</hadoop.version>  <!-- Requires java 8 -->
+        <hadoop.version>3.2.0</hadoop.version>  <!-- Requires java 8 -->
         <log4j2.version>2.8.2</log4j2.version>
         <slf4j.version>1.7.10</slf4j.version>   
         <vdp.version>7.0.0</vdp.version>
@@ -171,8 +171,13 @@
             <groupId>org.apache.avro</groupId>
             <artifactId>avro</artifactId>
             <version>${avro.version}</version>
-            <scope>provided</scope>           
-        </dependency>
+            <exclusions>
+               <exclusion>
+                   <groupId>*</groupId>
+                   <artifactId>*</artifactId>
+               </exclusion>
+           </exclusions>
+       </dependency>
 
         <dependency>
             <groupId>org.apache.avro</groupId>
