--- a/hdfs-customwrapper/src/test/resources/vdp_tests.properties
+++ b/hdfs-customwrapper/src/test/resources/vdp_tests.properties
@@ -1,4 +1,4 @@
-#Tue Feb 12 13:33:45 CET 2019
+#Mon Apr 29 13:48:44 CEST 2019
 databases.hdfs.views.custom.delimitedfile_adl.Custom\ core-site.xml\ file.ROUTE.LOCAL.PATH=C\:/Work/HDFS/tests/core-site-datalake.xml
 databases.hdfs.views.custom.delimitedfile_azure.Custom\ core-site.xml\ file.ROUTE.LOCAL.PATH=C\:/Work/Hadoop/tests/core-site-s3a.xml
 databases.hdfs.views.custom.delimitedfile_s3a.Custom\ core-site.xml\ file.ROUTE.LOCAL.PATH=C\:/Work/HDFS/tests/core-site-s3a.xml
