--- a/hdfs-customwrapper/pom.xml
+++ b/hdfs-customwrapper/pom.xml
@@ -25,7 +25,7 @@
         <httpclient.version>4.5.2</httpclient.version>  <!-- min required by aws-sdk  -->
         <httpcore.version>4.4.4</httpcore.version>
         <log4j2.version>2.8.2</log4j2.version>
-        <parquet.version>1.9.0</parquet.version>
+        <parquet.version>1.10.1</parquet.version>
         <slf4j.version>1.7.10</slf4j.version>     
         <vdp.version>7.0.0</vdp.version>
         <java.version>1.8</java.version>
@@ -561,15 +561,20 @@
         <dependency>
             <groupId>org.apache.parquet</groupId>
             <artifactId>parquet-hadoop</artifactId>
-            <version>${parquet.version}</version>      
-            <scope>runtime</scope>
+            <version>${parquet.version}</version>
             <exclusions>
                 <exclusion>
                     <groupId>*</groupId>
                     <artifactId>*</artifactId>
                 </exclusion>
             </exclusions>
-        </dependency>        
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.hadoop</groupId>
+            <artifactId>hadoop-client</artifactId>
+            <version>3.2.0</version>
+        </dependency>
         
         <dependency> 
             <groupId>com.hadoop.gplcompression</groupId>
