--- a/hdfs-customwrapper/pom.xml
+++ b/hdfs-customwrapper/pom.xml
@@ -11,7 +11,7 @@
     <name>${project.artifactId}</name>
     <description>${project.artifactId}</description>
     <packaging>jar</packaging>
-    <version>20190805</version>
+    <version>20190814</version>
 
     <properties>
         <aws.sdk.version>1.11.375</aws.sdk.version>
@@ -218,6 +218,18 @@
                             <outputDirectory>${project.build.directory}/lib</outputDirectory>
                         </configuration>
                     </execution>
+                  <execution>
+                    <id>copy-source</id>
+                    <phase>package</phase>
+                    <goals>
+                      <goal>copy-dependencies</goal>
+                    </goals>
+                    <configuration>
+                      <includeArtifactIds>denodo-hadoop-commons-7.0</includeArtifactIds>
+                      <classifier>sources</classifier>
+                      <outputDirectory>${project.build.directory}</outputDirectory>
+                    </configuration>
+                  </execution>
                 </executions>
             </plugin>
 
