--- a/hdfs-customwrapper/pom.xml
+++ b/hdfs-customwrapper/pom.xml
@@ -11,13 +11,14 @@
     <name>${project.artifactId}</name>
     <description>${project.artifactId}</description>
     <packaging>jar</packaging>
-    <version>20190829</version>
+    <version>20191024</version>
 
     <properties>
         <aws.sdk.version>1.11.199</aws.sdk.version>
         <avro.version>1.8.2</avro.version>
         <commons-lang.version>2.6</commons-lang.version> 
         <commons-io.version>2.6</commons-io.version>
+        <commons-codec.version>1.10</commons-codec.version>
         <hadoop.version>2.9.1</hadoop.version>
         <hadoop.lzo.version>0.4.20</hadoop.lzo.version>
         <httpclient.version>4.5.2</httpclient.version>  <!-- minimin required by aws-sdk  -->
