--- a/hadoop-commons/pom.xml
+++ b/hadoop-commons/pom.xml
@@ -21,7 +21,7 @@
         <hadoop.version>3.2.0</hadoop.version>  <!-- Requires java 8 -->
         <log4j2.version>2.8.2</log4j2.version>
         <slf4j.version>1.7.10</slf4j.version>   
-        <vdp.version>7.0.0</vdp.version>
+        <vdp.version>7.0.5</vdp.version>
         <parquet.version>1.10.1</parquet.version>
         <java.version>1.8</java.version>
         <errorprone.javac.version>9+181-r4173-1</errorprone.javac.version>
@@ -225,6 +225,12 @@
                     <artifactId>*</artifactId>
                 </exclusion>
             </exclusions>             
+        </dependency>
+
+        <dependency>
+            <groupId>org.xerial.snappy</groupId>
+            <artifactId>snappy-java</artifactId>
+            <version>1.1.7.3</version>
         </dependency>
 
         <dependency>
