--- a/hdfs-customwrapper/pom.xml
+++ b/hdfs-customwrapper/pom.xml
@@ -19,7 +19,7 @@
         <commons-lang.version>2.6</commons-lang.version> 
         <commons-io.version>2.6</commons-io.version>
         <commons-codec.version>1.10</commons-codec.version>
-        <hadoop.version>2.9.1</hadoop.version>
+        <hadoop.version>3.2.1</hadoop.version>
         <hadoop.lzo.version>0.4.20</hadoop.lzo.version>
         <httpclient.version>4.5.2</httpclient.version>  <!-- minimin required by aws-sdk  -->
         <httpcore.version>4.4.4</httpcore.version>  
@@ -513,7 +513,7 @@
         <dependency>
             <groupId>org.apache.hadoop</groupId>
             <artifactId>hadoop-client</artifactId>
-            <version>3.2.0</version>
+            <version>${hadoop.version}</version>
         </dependency>
       
         <dependency>
