Update tests with configuration divided between DataSources and BaseViews

--- a/hdfs-customwrapper/src/test/resources/vdp_tests.properties
+++ b/hdfs-customwrapper/src/test/resources/vdp_tests.properties
@@ -1,20 +1,19 @@
 #Wed May 08 16:37:00 CEST 2019
-databases.hdfs.views.custom.delimitedfile_abfs.Custom\ core-site.xml\ file.ROUTE.LOCAL.PATH=C\:/GITROOT/dt-hadoop/hdfs-customwrapper/src/test/resources/wrapper_conf/core-site-abfs.xml
-databases.hdfs.views.custom.delimitedfile_adl.Custom\ core-site.xml\ file.ROUTE.LOCAL.PATH=C\:/GITROOT/dt-hadoop/hdfs-customwrapper/src/test/resources/wrapper_conf/core-site-datalake.xml
-databases.hdfs.views.custom.delimitedfile_azure.Custom\ core-site.xml\ file.ROUTE.LOCAL.PATH=C\:/Work/Hadoop/tests/core-site-s3a.xml
-databases.hdfs.views.custom.delimitedfile_gcs.Custom\ core-site.xml\ file.ROUTE.LOCAL.PATH=C\:/GITROOT/dt-hadoop/hdfs-customwrapper/src/test/resources/wrapper_conf/core-site-gcs.xml
-databases.hdfs.views.custom.delimitedfile_matching_errors.Custom\ core-site.xml\ file.ROUTE.LOCAL.PATH=C\:/Work/HDFS/tests/core-site-gcs.xml
-databases.hdfs.views.custom.delimitedfile_s3a.Custom\ core-site.xml\ file.ROUTE.LOCAL.PATH=C\:/GITROOT/dt-hadoop/hdfs-customwrapper/src/test/resources/wrapper_conf/core-site-s3a.xml
+databases.hdfs.views.custom.delimited_abfs.Custom\ core-site.xml\ file.ROUTE.LOCAL.PATH=C\:/GITROOT/dt-hadoop/hdfs-customwrapper/src/test/resources/wrapper_conf/core-site-abfs.xml
+databases.hdfs.views.custom.delimited_adl.Custom\ core-site.xml\ file.ROUTE.LOCAL.PATH=C\:/GITROOT/dt-hadoop/hdfs-customwrapper/src/test/resources/wrapper_conf/core-site-datalake.xml
+databases.hdfs.views.custom.delimited_azure.Custom\ core-site.xml\ file.ROUTE.LOCAL.PATH=C\:/Work/Hadoop/tests/core-site-s3a.xml
+databases.hdfs.views.custom.delimited_gcs.Custom\ core-site.xml\ file.ROUTE.LOCAL.PATH=C\:/GITROOT/dt-hadoop/hdfs-customwrapper/src/test/resources/wrapper_conf/core-site-gcs.xml
+databases.hdfs.views.custom.delimited_s3a.Custom\ core-site.xml\ file.ROUTE.LOCAL.PATH=C\:/GITROOT/dt-hadoop/hdfs-customwrapper/src/test/resources/wrapper_conf/core-site-s3a.xml
 databases.hdfs.views.custom.delimitedfile_s3n.Custom\ core-site.xml\ file.ROUTE.LOCAL.PATH=C\:/Work/Hadoop/tests/core-site-s3n.xml
-databases.hdfs.views.custom.delimitedfile_wasb.Custom\ core-site.xml\ file.ROUTE.LOCAL.PATH=C\:/GITROOT/dt-hadoop/hdfs-customwrapper/src/test/resources/wrapper_conf/core-site-blob.xml
-databases.hdfs.views.custom.delimitedfile_wasb2.Custom\ core-site.xml\ file.ROUTE.LOCAL.PATH=C\:/GITROOT/dt-hadoop/hdfs-customwrapper/src/test/resources/wrapper_conf/core-site-blob2.xml
-databases.hdfs.views.custom.delimitedfile_wasb_copy.Custom\ core-site.xml\ file.ROUTE.LOCAL.PATH=C\:/GITROOT/dt-hadoop/hdfs-customwrapper/src/test/resources/wrapper_conf/core-site-blob - Copy.xml
-databases.hdfs.views.custom.listing_dfs.Custom\ hdfs-site.xml\ file.ROUTE.LOCAL.PATH=C\:/Work/HDFS/tests/core-site-gcs.xml
-databases.hdfs.views.custom.listing_dfs_abfs.Custom\ hdfs-site.xml\ file.ROUTE.LOCAL.PATH=C\:/GITROOT/dt-hadoop/hdfs-customwrapper/src/test/resources/wrapper_conf/core-site-abfs.xml
-databases.hdfs.views.custom.listing_dfs_adl.Custom\ hdfs-site.xml\ file.ROUTE.LOCAL.PATH=C\:/GITROOT/dt-hadoop/hdfs-customwrapper/src/test/resources/wrapper_conf/core-site-datalake.xml
-databases.hdfs.views.custom.listing_dfs_gcs.Custom\ hdfs-site.xml\ file.ROUTE.LOCAL.PATH=C\:/GITROOT/dt-hadoop/hdfs-customwrapper/src/test/resources/wrapper_conf/core-site-gcs.xml
-databases.hdfs.views.custom.listing_dfs_s3a.Custom\ hdfs-site.xml\ file.ROUTE.LOCAL.PATH=C\:/GITROOT/dt-hadoop/hdfs-customwrapper/src/test/resources/wrapper_conf/core-site-s3a.xml
-databases.hdfs.views.custom.listing_dfs_wasb.Custom\ hdfs-site.xml\ file.ROUTE.LOCAL.PATH=C\:/GITROOT/dt-hadoop/hdfs-customwrapper/src/test/resources/wrapper_conf/core-site-blob.xml
-databases.hdfs.views.custom.listing_dfs_wasb2.Custom\ hdfs-site.xml\ file.ROUTE.LOCAL.PATH=C\:/GITROOT/dt-hadoop/hdfs-customwrapper/src/test/resources/wrapper_conf/core-site-blob2.xml
+databases.hdfs.views.custom.delimited_wasb.Custom\ core-site.xml\ file.ROUTE.LOCAL.PATH=C\:/GITROOT/dt-hadoop/hdfs-customwrapper/src/test/resources/wrapper_conf/core-site-blob.xml
+databases.hdfs.views.custom.delimited_wasbs.Custom\ core-site.xml\ file.ROUTE.LOCAL.PATH=C\:/GITROOT/dt-hadoop/hdfs-customwrapper/src/test/resources/wrapper_conf/core-site-blob2.xml
+databases.hdfs.views.custom.delimited_wasb_copy.Custom\ core-site.xml\ file.ROUTE.LOCAL.PATH=C\:/GITROOT/dt-hadoop/hdfs-customwrapper/src/test/resources/wrapper_conf/core-site-blob - Copy.xml
+databases.hdfs.views.custom.listing_gcs.Custom\ hdfs-site.xml\ file.ROUTE.LOCAL.PATH=C\:/Work/HDFS/tests/core-site-gcs.xml
+databases.hdfs.views.custom.listing_abfs.Custom\ hdfs-site.xml\ file.ROUTE.LOCAL.PATH=C\:/GITROOT/dt-hadoop/hdfs-customwrapper/src/test/resources/wrapper_conf/core-site-abfs.xml
+databases.hdfs.views.custom.listing_adl.Custom\ hdfs-site.xml\ file.ROUTE.LOCAL.PATH=C\:/GITROOT/dt-hadoop/hdfs-customwrapper/src/test/resources/wrapper_conf/core-site-datalake.xml
+databases.hdfs.views.custom.listing_gcs.Custom\ hdfs-site.xml\ file.ROUTE.LOCAL.PATH=C\:/GITROOT/dt-hadoop/hdfs-customwrapper/src/test/resources/wrapper_conf/core-site-gcs.xml
+databases.hdfs.views.custom.listing_s3a.Custom\ hdfs-site.xml\ file.ROUTE.LOCAL.PATH=C\:/GITROOT/dt-hadoop/hdfs-customwrapper/src/test/resources/wrapper_conf/core-site-s3a.xml
+databases.hdfs.views.custom.listing_wasb.Custom\ hdfs-site.xml\ file.ROUTE.LOCAL.PATH=C\:/GITROOT/dt-hadoop/hdfs-customwrapper/src/test/resources/wrapper_conf/core-site-blob.xml
+databases.hdfs.views.custom.listing_wasb2.Custom\ hdfs-site.xml\ file.ROUTE.LOCAL.PATH=C\:/GITROOT/dt-hadoop/hdfs-customwrapper/src/test/resources/wrapper_conf/core-site-blob2.xml
 databases.hdfs.views.custom.parquetdir_chriswalters.Custom\ core-site.xml\ file.ROUTE.LOCAL.PATH=C\:/Work/HDFS/tests/par-core-site.xml
 databases.hdfs.views.custom.parquetdir_chriswalters.Custom\ hdfs-site.xml\ file.ROUTE.LOCAL.PATH=C\:/Work/HDFS/tests/par-hdfs-site.xml
