--- a/hadoop-commons/pom.xml
+++ b/hadoop-commons/pom.xml
@@ -11,18 +11,18 @@
     <name>${project.artifactId}</name>
     <description>${project.artifactId}</description>
     <packaging>jar</packaging>
-    <version>20191119</version>
+    <version>20200213</version>
 
     <properties>
         <avro.version>1.8.2</avro.version>
         <commons-csv.version>1.4</commons-csv.version>
         <commons-io.version>2.6</commons-io.version>          
-        <commons-lang.version>2.6</commons-lang.version>     
+        <commons-lang.version>3.8.1</commons-lang.version>
         <hadoop.version>3.2.1</hadoop.version>
         <log4j.version>1.2.15</log4j.version>        
         <slf4j.version>1.7.10</slf4j.version>
         <vdp.version>6.0.0</vdp.version>
-        <parquet.version>1.10.1</parquet.version>
+        <parquet.version>1.11.0</parquet.version>
         <java.version>1.8</java.version>
         <errorprone.javac.version>9+181-r4173-1</errorprone.javac.version>
         <errorprone.core.version>2.3.2</errorprone.core.version>
@@ -128,18 +128,7 @@
     <!-- ****************************************************************** -->
      <dependencies>
 
-        <dependency>
-            <groupId>commons-lang</groupId>
-            <artifactId>commons-lang</artifactId>
-            <version>${commons-lang.version}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>commons-io</groupId>
-            <artifactId>commons-io</artifactId>
-            <version>${commons-io.version}</version>
-        </dependency> 
-             
+ 
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
@@ -160,18 +149,24 @@
             <version>${log4j.version}</version>
             <scope>provided</scope>
         </dependency>
+        
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>${commons-io.version}</version>
+        </dependency> 
 
-       <dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>${commons-lang.version}</version>
+        </dependency>
+
+      <dependency>
             <groupId>org.apache.avro</groupId>
             <artifactId>avro</artifactId>
             <version>${avro.version}</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>*</groupId>
-                    <artifactId>*</artifactId>
-                </exclusion>
-            </exclusions>             
-        </dependency>
+      </dependency>
 
         <dependency>
             <groupId>org.apache.avro</groupId>
@@ -207,7 +202,6 @@
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-csv</artifactId>
             <version>${commons-csv.version}</version>
-            <scope>compile</scope>
         </dependency>        
 
         <dependency>
