--- a/hdfs-customwrapper/pom.xml
+++ b/hdfs-customwrapper/pom.xml
@@ -11,14 +11,14 @@
     <name>${project.artifactId}</name>
     <description>${project.artifactId}</description>
     <packaging>jar</packaging>
-    <version>20191119</version>
+    <version>20200213</version>
 
     <properties>
         <aws.sdk.version>1.11.589</aws.sdk.version>
         <avro.version>1.8.2</avro.version>
-        <commons-lang.version>2.6</commons-lang.version> 
-        <commons-io.version>2.6</commons-io.version>
         <commons-codec.version>1.10</commons-codec.version>
+        <commons-io.version>2.6</commons-io.version>
+        <commons-lang.version>3.8.1</commons-lang.version>
         <hadoop.version>3.2.1</hadoop.version>
         <hadoop.lzo.version>0.4.20</hadoop.lzo.version>
         <httpclient.version>4.5.2</httpclient.version>  <!-- minimin required by aws-sdk  -->
@@ -29,10 +29,10 @@
         <jetty.version>6.1.26</jetty.version>    
         <slf4j.version>1.7.10</slf4j.version> 
         <vdp.version>6.0.0</vdp.version>
-        <parquet.version>1.10.1</parquet.version>
+        <parquet.version>1.11.0</parquet.version>
         <java.version>1.8</java.version>
         <errorprone.javac.version>9+181-r4173-1</errorprone.javac.version>
-        <errorprone.core.version>2.3.2</errorprone.core.version>        
+        <errorprone.core.version>2.3.2</errorprone.core.version>
     </properties>
     <!-- *************************** -->
     <!-- PROFILES -->
@@ -82,6 +82,7 @@
                 </includes>
             </resource>
         </resources>
+
 
         <!-- ============================================================== -->
         <!-- Test-related directory locations -->
@@ -233,7 +234,7 @@
                   </execution>
                 </executions>
             </plugin>
-            
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-assembly-plugin</artifactId>
@@ -264,7 +265,6 @@
     <!-- DEPENDENCIES -->
     <!-- ****************************************************************** -->
     <dependencies>
-
 
         <dependency>
             <groupId>com.denodo.vdp</groupId>
@@ -304,7 +304,7 @@
                     <artifactId>*</artifactId>
                 </exclusion>
             </exclusions> 
-        </dependency>      
+        </dependency>  
        
         <dependency>
             <groupId>org.apache.hadoop</groupId>
@@ -378,7 +378,13 @@
                 </exclusion>
             </exclusions>             
         </dependency>
-               
+        
+     <!-- 
+        IMPORTANT:
+        In Hadoop 3.x S3A depends upon two JARs, alongside hadoop-common and its dependencies.
+         - hadoop-aws
+         - aws-java-sdk-bundle. As this jar is ~ 82MB we decided not to include it and inlcude only aws-java-sdk-* libraries that were required in our tests.
+        --> 
        <dependency>
             <groupId>com.amazonaws</groupId>
             <artifactId>aws-java-sdk-s3</artifactId>
@@ -457,7 +463,7 @@
             <artifactId>hadoop-azure-datalake</artifactId>
             <version>${hadoop.version}</version>
         </dependency>
-                        
+
         <dependency>
             <groupId>org.apache.hadoop</groupId>
             <artifactId>hadoop-azure</artifactId>
@@ -471,12 +477,6 @@
             <version>${jetty.version}</version>
         </dependency>  
         
-        <dependency> 
-            <groupId>com.hadoop.gplcompression</groupId>
-            <artifactId>hadoop-lzo</artifactId>
-            <version>${hadoop.lzo.version}</version>
-            <scope>runtime</scope>             
-        </dependency>
         
         <!--  Overrides jets3t from hadoop-commons with v0.94 -> Fix S3 Service - Amazon signature version 4 -->        
         <dependency>
@@ -488,7 +488,7 @@
                     <groupId>*</groupId>
                     <artifactId>*</artifactId>
                 </exclusion>
-            </exclusions>          
+            </exclusions>       
         </dependency>   
         
         <dependency> 
@@ -514,12 +514,6 @@
             <groupId>org.apache.parquet</groupId>
             <artifactId>parquet-hadoop</artifactId>
             <version>${parquet.version}</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>*</groupId>
-                    <artifactId>*</artifactId>
-                </exclusion>
-            </exclusions>
         </dependency>
 
         <dependency>
@@ -527,24 +521,31 @@
             <artifactId>hadoop-client</artifactId>
             <version>${hadoop.version}</version>
         </dependency>
+
+        <dependency> 
+            <groupId>com.hadoop.gplcompression</groupId>
+            <artifactId>hadoop-lzo</artifactId>
+            <version>${hadoop.lzo.version}</version>
+            <scope>runtime</scope>             
+        </dependency>
       
         <dependency>
             <groupId>com.denodo.connect.hadoop</groupId>
             <artifactId>denodo-hadoop-commons-6.0</artifactId>
             <version>${project.version}</version>
         </dependency>
-    
-        <dependency>
-            <groupId>commons-io</groupId>
-            <artifactId>commons-io</artifactId>
-            <version>${commons-io.version}</version>
-        </dependency>
-          
-        <dependency>
-            <groupId>commons-lang</groupId>
-            <artifactId>commons-lang</artifactId>
-            <version>${commons-lang.version}</version>
-        </dependency>  
+        
+      <dependency>
+        <groupId>commons-io</groupId>
+        <artifactId>commons-io</artifactId>
+        <version>${commons-io.version}</version>
+      </dependency>
+            
+      <dependency>
+        <groupId>org.apache.commons</groupId>
+        <artifactId>commons-lang3</artifactId>
+        <version>${commons-lang.version}</version>
+      </dependency>
 
     </dependencies>
 </project>
