--- a/hadoop-commons/pom.xml
+++ b/hadoop-commons/pom.xml
@@ -11,7 +11,7 @@
     <name>${project.artifactId}</name>
     <description>${project.artifactId}</description>
     <packaging>jar</packaging>
-    <version>201912-CURRENT</version>
+    <version>20200116-dev</version>
 
     <properties>
         <avro.version>1.8.2</avro.version>
@@ -22,7 +22,7 @@
         <log4j2.version>2.8.2</log4j2.version>
         <slf4j.version>1.7.10</slf4j.version>   
         <vdp.version>7.0.5</vdp.version>
-        <parquet.version>1.11.0-denodo20191212</parquet.version>
+        <parquet.version>1.11.0</parquet.version>
         <java.version>1.8</java.version>
         <errorprone.javac.version>9+181-r4173-1</errorprone.javac.version>
         <errorprone.core.version>2.3.2</errorprone.core.version>
