--- a/hadoop-commons/pom.xml
+++ b/hadoop-commons/pom.xml
@@ -11,13 +11,13 @@
     <name>${project.artifactId}</name>
     <description>${project.artifactId}</description>
     <packaging>jar</packaging>
-    <version>20200116-dev</version>
+    <version>202002-dev</version>
 
     <properties>
         <avro.version>1.8.2</avro.version>
         <commons-csv.version>1.4</commons-csv.version>
         <commons-io.version>2.6</commons-io.version>
-        <commons-lang.version>2.6</commons-lang.version>
+        <commons-lang.version>3.8.1</commons-lang.version>
         <hadoop.version>3.2.1</hadoop.version>  <!-- Requires java 8 -->
         <log4j2.version>2.8.2</log4j2.version>
         <slf4j.version>1.7.10</slf4j.version>   
@@ -162,8 +162,8 @@
       </dependency>
             
       <dependency>
-        <groupId>commons-lang</groupId>
-        <artifactId>commons-lang</artifactId>
+        <groupId>org.apache.commons</groupId>
+        <artifactId>commons-lang3</artifactId>
         <version>${commons-lang.version}</version>
       </dependency>
 
