--- a/hadoop-commons/pom.xml
+++ b/hadoop-commons/pom.xml
@@ -11,7 +11,7 @@
     <name>${project.artifactId}</name>
     <description>${project.artifactId}</description>
     <packaging>jar</packaging>
-    <version>202002-dev</version>
+    <version>20200213</version>
 
     <properties>
         <avro.version>1.8.2</avro.version>
