--- a/hdfs-customwrapper/pom.xml
+++ b/hdfs-customwrapper/pom.xml
@@ -11,7 +11,7 @@
     <name>${project.artifactId}</name>
     <description>${project.artifactId}</description>
     <packaging>jar</packaging>
-    <version>202002-dev</version>
+    <version>20200213</version>
 
     <properties>
         <aws.sdk.version>1.11.589</aws.sdk.version>
