--- a/hadoop-commons/pom.xml
+++ b/hadoop-commons/pom.xml
@@ -19,6 +19,7 @@
         <commons-io.version>2.6</commons-io.version>          
         <commons-lang.version>3.8.1</commons-lang.version>
         <hadoop.version>3.2.1</hadoop.version>
+        <junit.version>4.13</junit.version>
         <log4j.version>1.2.15</log4j.version>        
         <slf4j.version>1.7.10</slf4j.version>
         <vdp.version>6.0.0</vdp.version>
@@ -240,6 +241,13 @@
             <version>${vdp.version}</version>
             <scope>provided</scope>
         </dependency>
+
+       <dependency>
+         <groupId>junit</groupId>
+         <artifactId>junit</artifactId>
+         <version>${junit.version}</version>
+         <scope>test</scope>
+       </dependency>
 
     </dependencies>
 </project>
