--- a/hadoop-commons/pom.xml
+++ b/hadoop-commons/pom.xml
@@ -11,14 +11,16 @@
     <name>${project.artifactId}</name>
     <description>${project.artifactId}</description>
     <packaging>jar</packaging>
-    <version>20200213</version>
+    <version>20200309</version>
 
     <properties>
         <avro.version>1.8.2</avro.version>
         <commons-csv.version>1.4</commons-csv.version>
+        <commons-collections.version>3.2.2</commons-collections.version>
         <commons-io.version>2.6</commons-io.version>
         <commons-lang.version>3.8.1</commons-lang.version>
         <hadoop.version>3.2.1</hadoop.version>  <!-- Requires java 8 -->
+        <junit.version>4.13</junit.version>
         <log4j2.version>2.8.2</log4j2.version>
         <slf4j.version>1.7.10</slf4j.version>   
         <vdp.version>7.0.5</vdp.version>
@@ -153,8 +155,14 @@
             <artifactId>log4j-api</artifactId>
             <version>${log4j2.version}</version>
             <scope>provided</scope>
-        </dependency> 
-              
+        </dependency>
+
+        <dependency>
+            <groupId>commons-collections</groupId>
+            <artifactId>commons-collections</artifactId>
+            <version>${commons-collections.version}</version>
+        </dependency>
+
       <dependency>
         <groupId>commons-io</groupId>
         <artifactId>commons-io</artifactId>
@@ -245,6 +253,14 @@
             <version>${vdp.version}</version>
             <scope>provided</scope>
         </dependency>
+
+
+         <dependency>
+             <groupId>junit</groupId>
+             <artifactId>junit</artifactId>
+             <version>${junit.version}</version>
+             <scope>test</scope>
+         </dependency>
 
     </dependencies>
 </project>
