--- a/hadoop-commons/pom.xml
+++ b/hadoop-commons/pom.xml
@@ -11,19 +11,19 @@
     <name>${project.artifactId}</name>
     <description>${project.artifactId}</description>
     <packaging>jar</packaging>
-    <version>20200309</version>
+    <version>20200317</version>
 
     <properties>
         <avro.version>1.8.2</avro.version>
         <commons-csv.version>1.4</commons-csv.version>
         <commons-io.version>2.6</commons-io.version>          
         <commons-lang.version>3.8.1</commons-lang.version>
-        <hadoop.version>3.2.1</hadoop.version>
+        <hadoop.version>2.10.0</hadoop.version>  <!-- hadoop 2.x.x have to be used, as they are compatible with java 7 -->
         <junit.version>4.13</junit.version>
         <log4j.version>1.2.15</log4j.version>        
         <slf4j.version>1.7.10</slf4j.version>
         <vdp.version>6.0.0</vdp.version>
-        <parquet.version>1.11.0</parquet.version>
+        <parquet.version>1.9.0</parquet.version> <!-- This is the last version compatible with java 7 -->
         <java.version>1.8</java.version>
         <errorprone.javac.version>9+181-r4173-1</errorprone.javac.version>
         <errorprone.core.version>2.3.2</errorprone.core.version>
@@ -247,6 +247,13 @@
          <groupId>junit</groupId>
          <artifactId>junit</artifactId>
          <version>${junit.version}</version>
+         <scope>test</scope>
+       </dependency>
+
+       <dependency>
+         <groupId>commons-lang</groupId>
+         <artifactId>commons-lang</artifactId>
+         <version>2.6</version>
          <scope>test</scope>
        </dependency>
 
