--- a/hadoop-commons/pom.xml
+++ b/hadoop-commons/pom.xml
@@ -11,7 +11,7 @@
     <name>${project.artifactId}</name>
     <description>${project.artifactId}</description>
     <packaging>jar</packaging>
-    <version>20200402</version>
+    <version>20200506</version>
 
     <properties>
         <avro.version>1.8.2</avro.version>
@@ -19,13 +19,13 @@
         <commons-collections.version>3.2.2</commons-collections.version>
         <commons-io.version>2.6</commons-io.version>
         <commons-lang.version>3.8.1</commons-lang.version>
-        <hadoop.version>3.2.1</hadoop.version>  <!-- Requires java 8 -->
+        <hadoop.version>3.2.1</hadoop.version>
         <junit.version>4.13</junit.version>
         <log4j2.version>2.8.2</log4j2.version>
         <slf4j.version>1.7.10</slf4j.version>   
-        <vdp.version>8.0.0-Beta-20200313</vdp.version>
+        <vdp.version>8.0.0-Beta1</vdp.version>
         <parquet.version>1.11.0</parquet.version>
-        <java.version>1.8</java.version>
+        <java.version>11</java.version>
         <errorprone.javac.version>9+181-r4173-1</errorprone.javac.version>
         <errorprone.core.version>2.3.2</errorprone.core.version>
     </properties>
@@ -90,9 +90,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>2.3.2</version>
                 <configuration>
-                    <!-- VDP 7.0 requires 1.8 -->
-                    <source>1.8</source>
-                    <target>1.8</target>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
                     <encoding>US-ASCII</encoding>
                 </configuration>
             </plugin>
