--- a/hdfs-customwrapper/pom.xml
+++ b/hdfs-customwrapper/pom.xml
@@ -11,7 +11,7 @@
     <name>${project.artifactId}</name>
     <description>${project.artifactId}</description>
     <packaging>jar</packaging>
-    <version>20200402</version>
+    <version>20200506</version>
 
     <properties>
         <aws.sdk.version>1.11.589</aws.sdk.version>
@@ -21,15 +21,15 @@
         <commons-io.version>2.6</commons-io.version>
         <commons-lang.version>3.8.1</commons-lang.version>
         <gcs.version>hadoop3-1.9.17</gcs.version>
-        <hadoop.version>3.2.1</hadoop.version> <!-- Requires java 8 -->
+        <hadoop.version>3.2.1</hadoop.version>
         <hadoop.lzo.version>0.4.20</hadoop.lzo.version>   
         <httpclient.version>4.5.2</httpclient.version>  <!-- min required by aws-sdk  -->
         <httpcore.version>4.4.4</httpcore.version>
         <log4j2.version>2.8.2</log4j2.version>
         <parquet.version>1.11.0</parquet.version>
         <slf4j.version>1.7.10</slf4j.version>     
-        <vdp.version>8.0.0-Beta-20200313</vdp.version>
-        <java.version>1.8</java.version>
+        <vdp.version>8.0.0-Beta1</vdp.version>
+        <java.version>11</java.version>
         <errorprone.javac.version>9+181-r4173-1</errorprone.javac.version>
         <errorprone.core.version>2.3.2</errorprone.core.version>
     </properties>
@@ -99,9 +99,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>2.3.2</version>
                 <configuration>
-                    <!-- VDP 7.0 requires 1.8 -->
-                    <source>1.8</source>
-                    <target>1.8</target>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
                     <encoding>US-ASCII</encoding>
                 </configuration>
             </plugin>
@@ -142,9 +141,9 @@
                         <Extension-Name>${project.artifactId}</Extension-Name>
                         <Extension-Description>${project.name}</Extension-Description>
                         <Extension-Version>${project.version}</Extension-Version>
-                        <Extension-Target-Version>7.0</Extension-Target-Version>
-                        <!-- Uncomment when an update of VDP 7.0 is required -->
-                       <Extension-Target-Update>20190903</Extension-Target-Update>
+                        <Extension-Target-Version>8.0</Extension-Target-Version>
+                        <!-- Uncomment when an update of VDP 8.0 is required -->
+                       <!-- <Extension-Target-Update></Extension-Target-Update> -->
                         <Extension-Website>http://support.denodo.com</Extension-Website>
                       </manifestEntries>
                     </manifestSection>
